--- a/index.html
+++ b/index.html
@@ -2,10 +2,26 @@
 <html lang="pt-BR">
 <head>
 <meta charset = "UTF-8">
-<title> Página Inicial </title>
+<title> #AMOBROOKLYN </title>
 </head>
 <body> 
-<h1> Bem vindo ao meu site </h1>
-<h3> Site desenvolvido por Fernando </h3>
+<h1> <em> Terry ama iogurte! </em> </h1>
+<h3> Brooklyn Nine Nine </h3>
+<ol>
+
+<li><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhz_tuhle7yYcbbWLXO9tnhaK7qQbxsDZRCwRYsAH7W_ivIKsv8sSrI6Ejr27drxVvuqR4MKXZ7Zze1ZcEK6KXZ8nSJWYDOyhW7bEkGdXiTAxIzSRyo_W4M8DluajoHjqyKWnQYL_iCa5U1/s480/brooklyn6.gif"width="400" height ="200" title="TERRY" /> </li>
+
+
+<li><img src="https://31.media.tumblr.com/96185ab6d3aa14cc7ef6c27093bf85c6/tumblr_nwg3etIHDA1rq49qyo1_500.gif"width="400" height ="200" title="aplausos" /> </li>
+
+<li><img src="https://i.pinimg.com/originals/f2/4e/bb/f24ebb6cfda9f9bee3b5b33d2066a8a0.gif" width="400" height ="250" title="brooklynnnn" /> </li>
+
+<li><img src="https://media4.giphy.com/media/xThuWmdBg5KbLYLMBy/giphy.gif"width="400" height ="200" title="jakezinho" /> </li>
+
+<li><img src="https://media3.giphy.com/media/v1.Y2lkPTZjMDliOTUyYWVjMmI5eWl2N2VvaTBrYnlrNzQ1cHNjZmVud3M4a2VmYTQwZ290eSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/nTVsVHEgRhvT3WfSOZ/source.gif"width="400" height ="200" title="GRITO DE GUERRA" /> </li>
+
+
+</ol>
+
 </body>
 </html>
