corrigi navegue entre pg

--- a/formulario.html
+++ b/formulario.html
@@ -10,16 +10,18 @@
 <ul>
     <li>
     <a href="index.html">
-        <li><em>Home</em>
-    </li>
+       <em>Home</em>
     </a>
+    </li>
 <li>
     <a href="fotos.html">
         <em>Fotos - Relembrar momentos </em>
     </a>
 </li>
+<li>
 <a href="tabela.html">
     <em>Tabela</em>
+</li>
 
 <li>
 <a href="formulario.html">
