colocamos produtos, valores e descrição na tabela

--- a/fotos.html
+++ b/fotos.html
@@ -20,7 +20,7 @@
 </li>
 <li>
 <a href="tabela.html">
-    <em>Tabela</em>
+    <em>Produtos</em>
 </li>
 
 <li>
@@ -58,7 +58,7 @@
              mesmo passando por situações embaraçosas. 
             </br>
             Um dos momentos mais marcantes é sua paixão exagerada pela culinária e por comida,
-              que vira piada recorrente e o torna único. Boyle também surpreende com sua sensibilidade e bondade, especialmente ao apoiar
+              que vira piada recorrente e o torna único. Boyle também surpreende com sua sensibilidade e bondade,</br> especialmente ao apoiar
                Rosa Diaz em momentos difíceis, mostrando um lado gentil e leal. 
             </br>
             Outro destaque é sua história de amor com Genevieve,
@@ -80,8 +80,8 @@
 </br>
 Amy também brilha em episódios 
  como o de sua promoção a sargento, onde mostra crescimento profissional e liderança. 
-</br>
 Sua obsessão por regras gera cenas hilárias, principalmente quando tenta controlar
+</br>
  o caos do esquadrão, mas aprende a flexibilizar suas atitudes. 
  O relacionamento com Jake traz momentos doces, como o pedido de casamento e o casamento, recheados de emoção e humor.
 </br>
