--- a/tabela.html
+++ b/tabela.html
@@ -1,103 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabela</title>
+    <title>Produtos</title>
 </head>
+
 <body>
     <h1>Tabela</h1>
     <h2> Navegue entre as páginas ⬇ </h2>
-<ul>
-    <li>
-    <a href="index.html">
-       <em>Home</em>
-    </a>
+    <ul>
+        <li>
+            <a href="index.html">
+                <em>Home</em>
+            </a>
 
-    </li>
-<li>
-    <a href="fotos.html">
-        <em>Fotos - Relembrar momentos </em>
-    </a>
-</li>
-<li>
-<a href="tabela.html">
-    <em>Tabela</em>
-    </a>
-</li>
+        </li>
+        <li>
+            <a href="fotos.html">
+                <em>Fotos - Relembrar momentos </em>
+            </a>
+        </li>
+        <li>
+            <a href="tabela.html">
+                <em>Produtos</em>
+            </a>
+        </li>
 
-<li>
-<a href="formulario.html">
-    <em>Formulário</em>
-</a>
-</li>
-</ul>
+        <li>
+            <a href="formulario.html">
+                <em>Formulário</em>
+            </a>
+        </li>
+    </ul>
 
 
-<table border="2">
-    <thead>
-        <tr>
-            <th> Id </th>
-            <th> Nome </th>
-            <th> Altura </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td> <img src ="https://m.media-amazon.com/images/I/51sxr1JENTL.__AC_SX300_SY300_QL70_ML2_.jpg" /> </td>
-            <td> Fernando Graciano </td>
-            <td> 1.77 </td>
-            <td>
-            <button> Editar Admin </button>
-        </td>
-        </tr>
-        <tr>
-            <td> 2 </td>
-            <td> Maria Clara </td>
-            <td> 1.65 </td>
-            <td>
-            <button> Excluir cliente </button>
-        </td>
-        </tr>
-<tr>
-    <td colspan="4"> Essa coluna está mesclada</td>
-</tr>
-<tr>
-    <td rowspan="3">
-        3, 4, 5
-    </td>
-    <td>João Miguel</td>
-    <td>1.85</td>
-    <td>
-        <button> Excluir aluno </button>
-    </td>
-</tr>
-<tr>
+    <table border="2">
+        <thead>
+            <tr>
+                <th> Produto </th>
+                <th> Descrição </th>
+                <th> Valor </th>
+                <th>Loja</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td> <img
+                        src="https://http2.mlstatic.com/D_NQ_NP_809621-MLA82505115996_022025-O-caneca-da-serie-brooklyn-nine-nine-b99.webp"
+                        width="100" height="120" title="caneca" /> </td>
+                <td> Caneca Da Série Brooklyn Nine Nine - B99 </td>
+                <td> R$54,90 </td>
+                <td>
+                    <a
+                        href="https://produto.mercadolivre.com.br/MLB-5303308846-caneca-da-serie-brooklyn-nine-nine-b99-_JM?matt_tool=18956390&utm_source=google_shopping&utm_medium=organic">
+                        Comprar agora
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcTQYlnVZSep3yPnQBgWGKmgASpEfHuIdjSeiaiUyzD18bosLDH2f7g5OlqZJrLbIIHNel8k3JfUFVy6heZC1m8Ntxn8DbqmCTyyCVMdHbZP7kxf5N9diMxX"
+                        width="100" height="120" title="Agasalho" />
+                </td>
+                <td> Moletom Brooklyn Nine Nine 99 Série Tv Blusão Canguru Oferta
+                </td>
+                <td> R$69,90 </td>
+                <td>
+                    <a
+                        href="https://shopee.com.br/product/1101056863/22597171333?gads_t_sig=VTJGc2RHVmtYMTlxTFVSVVRrdENkWHlFU0hvQlZFVENpb1FnT09uNDlDSmZWZ1lwdmtFYW80QlkvNHlwemREdlAwd1YyQU9PTk5lMkZTejFrVTVCQWcvTEkxeG1zK1hEZjVuQUgvVmVyTE03SDh0c1VTYmRFdVdBTTJpNmVFa1JxZ3BSZ25jQjh2OXFhd01NREs1VlJBPT0&model=199591374476">
+                        Comprar agora
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcRQr-XqvRjIKTqpyAPAG59QSqvfPPoj9T6xAHo8dlanTeydNQl6qgRllXHiQdWcbQejfQijsfkslXbb7YylgZER3vH-pdsG45KLFejp3rX6abLftnU3g_a7uQ"
+                        width="100" height="120" title="chinelo" />
+                </td>
+                <td> Chinelo Brooklyn Nine-Nine - Estampas Variadas | Tamanhos Adulto e Infantil
+                </td>
+                <td> R$24,99 </td>
+                <td>
+                    <a
+                        href="https://shopee.com.br/product/412447419/23898194654?gads_t_sig=VTJGc2RHVmtYMTlxTFVSVVRrdENkVHQ3ZkZSUTMrR3pBWmZZNzdrcnRBM09ZL21lZnQzb0I0NHNVVVh6c0Mwai9BeHMveVlsaHRoOTZLaE9xblF0cjY4dVU1WGVYVGN1YlZhbWJLdXRRRHJOVS9ybER0NEZHMitiT25pNFJrOWxZYTJjTndNV2JsVjdGQTBjcTlDcGlBPT0">
+                        Comprar agora
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcTQa4iC4Gpo_fAUunPxOpbElPKct6BP3TSQQpbDvMns7WHREBSaqjwj_x9Bc22XBtii23xgQhcGRkURYkeFvYMHee2rq2SPTex8Juf_p4KPkURkZPPKZhmNkA"
+                        width="100" height="130" title="Funk Pop Amy" />
+                </td>
+                <td> Figura De Ação Funko, Brooklyn 99, Amy Santiago Estressada </td>
+                <td> R$167,41 </td>
+                <td>
+                    <a
+                        href="https://produto.mercadolivre.com.br/MLB-5488968902-figura-de-aco-funko-brooklyn-99-amy-santiago-estresada-_JM?matt_tool=18956390&utm_source=google_shopping&utm_medium=organic">
+                        Comprar agora
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcQH3zCySDXrSf_Jp6jTpICLn2oL6DW_Bg8dnSKEqfSTfeFomQ1VNFxjvJzspTU5OCny6ES5ZUr6v217MmvVzi6aomvTyMCpm7lH-tOGsH84_TYTrPEzk7JthA"
+                        width="100" height="120" title="Kit Stickers B99" />
+                </td>
+                <td> Brooklyn Nine Nine Serie 50 Calcomanías Stickers Pvc Vs Agua
+                </td>
+                <td> R$24,03 </td>
+                <td>
+                    <a
+                        href="https://www.mercadolivre.com.br/brooklyn-nine-nine-serie-50-calcomanias-stickers-pvc-vs-agua/p/MLB2026013635?matt_tool=18956390&utm_source=google_shopping&utm_medium=organic&pdp_filters=item_id%3AMLB5499911422&from=gshop">
+                        Comprar agora
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcQ48RBlVpxS-B82mz_nylXhiaPkN0rWzJPAjQ9StZ_b26OV81P77Ehj2ac0CkYxAtRemMxxYrQEEYfdWp-WzIz3atnM3Zg3vn19HBT7WyBbPov_M919zxz-Iag"
+                        width="100" height="150" title="Capinha para celular" />
+                </td>
+                <td> Capa para celular - Brooklyn Nine-nine
+                </td>
+                <td> R$49,90 </td>
+                <td>
+                    <a
+                        href="https://www.megaformiga.com.br/produtos/capa-para-celular-brooklyn-nine-nine-14754.aspx?srsltid=AfmBOorE4Z6Rvvv5uo8gixNrrm8RJVsPcqAo2kx2Cf2twtnsCTCgj5YBD-Y">
+                        Comprar agora
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcQX8rKE04ymWEMgBwpiWLwzUj1mypOhhf-81w9T6kBx2R2sfPvK3MqrpI2wCOFGOjgl5KLEs-kwXDZfuL6h-3e0g6T-6x10gpvxBOhW3ZhMj0mQtpU1bjGY"
+                        width="100" height="120" title="Quadro decorativo" />
+                </td>
+                <td> Quadro Decorativo Serie Brooklyn Nine-nine Com Moldura A3 </td>
+                <td> R$59,90 </td>
+                <td>
+                    <a
+                        href="https://produto.mercadolivre.com.br/MLB-3653282695-quadro-decorativo-serie-brooklyn-nine-nine-com-moldura-a3-_JM?matt_tool=18956390&utm_source=google_shopping&utm_medium=organic">
+                        Comprar agora
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcTZCm0xBVzlz70EczuQAl_eWdcqW29fEB8QjyJHuBa-HXwQYkgJM3RS8rP9qINWrn9RGELzow01ZGLnljAN20pdpTcdSAv_YFPEWtkuMYRrNLrAJhGHwaIM"
+                        width="100" height="120" title="Funk Pop! Jake Peralta" />
+                </td>
+                <td> Funko Pop! Brooklyn Nine-Nine Jake Peralta 1622
+                </td>
+                <td> R$387,00 </td>
+                <td>
+                    <a
+                        href="https://shopee.com.br/product/876369363/23498641393?gads_t_sig=VTJGc2RHVmtYMTlxTFVSVVRrdENkVHQ3ZkZSUTMrR3pBWmZZNzdrcnRBMmZsaFRDRFlqdVhyQjUyK1ZCYlg4K045NWVyMUtSYzRtdlF0NWZiR3Z2eGdHU1lPWGlFY1VQTnAyQUNkc0NYQzFzR3FXY3FuajFUcGZmV1EvMXFSTENiM01mSXJHYnlXNDN4cDFpaVNmVTVRPT0">
+                        Comprar agora
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcTqDDxfVGQ6gJzTSzVpKwvX6gBoZdWEVMJEmC8-r2AG571ogfsB-3rBPFd25Z4mDilMeeISvmjvi2Xlp0OuI3XVFSOMI0SDD9BsWyQ8O6wWgKRZwRjGOVGiTg"
+                        width="100" height="120" title="Totem Hitchcock e Scully" />
+                </td>
+                <td> Totem Médio Hitchcock e Scully Brooklyn Nine Nine 14cm+Base
+                </td>
+                <td> R$24,90 </td>
+                <td>
+                    <a
+                        href="https://shopee.com.br/product/1027307120/21498148759?gads_t_sig=VTJGc2RHVmtYMTlxTFVSVVRrdENkWHlFU0hvQlZFVENpb1FnT09uNDlDSTBRY2ZUTnZvWmxZQnpzVExlV1lzQ01SUnB2dzNwSjE1RGFQTTFOZEhtRFhUdllHeks2dEhlZE5oWlV6L0J4SUwxcExQdUt2OVpzV1ZONjFYeVk0ZHI3M09WQ0QrVmdCdVRoZENGV1h6UTBnPT0">
+                        Comprar agora
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcT-pUnW-UJNODn1vlQMaIjw_DVlD3SMqaT6zMYillKo85_enduQ9-Oj3S21D4Za-DVLU2Z43cl55Xx2gDrVn3u51XdW3oad6rxlK6_4jcolgGyr7N8S7LqAMA"
+                        width="100" height="100" title="caneca" />
+                </td>
+                <td> Trio de Chaveiros Brooklyn Nine Nine B99 3x4cm
 
-    <td>Rafaela</td>
-    <td>1.62</td>
-    <td>
-        <button> Editar aluno </button>
-    </td>
-</tr>
-<tr>
-    <td>Natalia</td>
-    <td>1.59</td>
-    <td>
-        <button> Editar professor(a) </button>
-    </td>
-</tr>
-<tr>
-    <td>6</td>
-    <td>Marcos</td>
-    <td>1.90</td>
-    <td> <a href="https://facebook.com">
-        Rede Social
-    </a>
-    </td>
-</tr>
-    </tbody>
-</table>
+                </td>
+                <td> R$24,00 </td>
+                <td>
+                    <a
+                        href="https://shopee.com.br/product/445207014/22493537737?gads_t_sig=VTJGc2RHVmtYMTlxTFVSVVRrdENkVHQ3ZkZSUTMrR3pBWmZZNzdrcnRBM3V0clVRNG1QTlNLc0NmS1RRNm4yL01wZk4zbm9UdUpseWFJa3FTT1BBOFJwODdzcUxuOUZsT0lya1NpVm5kMTFyeVpGMjlBVjVST0xRZVYrbHkwK3prRUNKWHN0TGd0TGVxTFlQZXdYSTB3PT0">
+                        Comprar agora
+                    </a>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </body>
+
 </html>
