--- a/formulario.html
+++ b/formulario.html
@@ -7,28 +7,158 @@
 </head>
 <body>
     <h2> Navegue entre as páginas ⬇ </h2>
-<ul>
+    <ul>
+        <li>
+        <a href="index.html">
+           <em>Home</em>
+        </a>
+        </li>
     <li>
-    <a href="index.html">
-       <em>Home</em>
+        <a href="fotos.html">
+            <em>Fotos - Relembrar momentos </em>
+        </a>
+    </li>
+    <li>
+    <a href="tabela.html">
+        <em>Produtos</em>
+    </li>
+    
+    <li>
+    <a href="formulario.html">
+        <em>Formulário</em>
     </a>
     </li>
-<li>
-    <a href="fotos.html">
-        <em>Fotos - Relembrar momentos </em>
-    </a>
-</li>
-<li>
-<a href="tabela.html">
-    <em>Produtos</em>
-</li>
+    </ul>  
+    <label> Input Button</label>
+<input type="button">
+<br />
+<br />
+<label>Caixa de opções marcado ou não</label>
+<input type="checkbox">
+<br />
+<br />
+<label>Abre uma caixa de cor</label>
+<input type="color">
+<br />
+<br />
+<label>Caixa de datas</label>
+<input type="date">
+<br />
+<br />
+<label>Caixa de datas UTC</label>
+<input type="datetime-local">
+<br />
+<br />
+<label>Valida e-mail válido</label>
+<input type="email">
+<br />
+<br />
+<label> Upload de arquivos</label>
+<input type="file">
+<br />
+<br />
+<label>Input Invisível</label>
+<input type="hidden">
+<br />
+<br />
+<label>Input Imagem</label>
+<input type="image">
+<br />
+<br />
+<label>Caixa de meses</label>
+<input type="month">
+<br />
+<br />
+<label>Caixa de números</label>
+<input type="number">
+<br />
+<br />
+<label>Protege a senha</label>
+<input type="password">
+<br />
+<br />
+<label>Grupo de opções únicas</label>
+<input type="radio">
+<br />
+<br />
+<label>Determinado espaço entre alguma coisa</label>
+<input type="range">
+<br />
+<br />
+<label>Reseta (limpa) o formulário</label>
+<input type="reset">
+<br />
+<br />
+<label>Input de pesquisa</label>
+<input type="search">
+<br />
+<br />
+<label>Envia os dados</label>
+<input type="submit">
+<br />
+<br />
+<label>Entrada de telefone</label>
+<input type="tel">
+<br />
+<br />
+<label>Entrada genérica</label>
+<input type="text">
+<br />
+<br />
+<label>Apenas com tempo</label>
+<input type="time">
+<br />
+<br />
+<label>Valida links</label>
+<input type="url">
+<br />
+<br />
+<label>Caixa com semanas</label>
+<input type="week">
+<br />
+<br />
 
-<li>
-<a href="formulario.html">
-    <em>Formulário</em>
-</a>
-</li>
-</ul>
+<form action = "" method = "">
+<label>Nome completo</label>
+<input type="text"/>
+<br />
+<br />
+<label>Data de nascimento</label>
+<input type="date"/>
+<br />
+<br />
+<label>CPF:</label>
+<input type="text" />
+<label>RG:</label>
+<input type="text" />
+<br><br>
+<label>Foto cartão de crédito frente</label>
+<br>
+<input type="file" />
+<br><br>
+<label>Foto cartão de crédito verso </label>
+<br>
+<input type="file" />
+<br><br>
+<label>Pets Preferidos</label>
+<br>
+<input type="checkbox" /> Catioro <br>
+<input type="checkbox" /> Miau <br>
+<input type="checkbox" /> Calopsita <br>
+<input type="checkbox" /> Coelho <br>
+<br>
+<label>Sexo</label>
+<br>
+<input type="radio" name="Sexo"/>Masculino<br>
+<input type="radio" name="Sexo"/>Feminino<br>
+<input type="radio" name="Sexo"/>Não Binário<br>
+<input type="radio" name="Sexo"/>Outros<br>
+
+<br>
+<button type="submit"> Salvar </button>
+<button type="reset"> Limpar form </button>
+</form>
+
     
 </body>
 </html>
