--- a/cadastro.html
+++ b/cadastro.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cadastro</title>
 </head>
 <body>
     <h2> Navegue entre as páginas ⬇ </h2>
@@ -27,8 +27,13 @@
     <a href="formulario.html">
         <em>Formulário</em>
     </a>
+    <li>
+        <a href="layout.html">
+            <em>Layout</em>
+        </li>
+    </a>
     </li>
-    </ul> 
+    </ul>
     <br>
     <label>Nome completo:</label>
     <br>
