--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
 <a href="formulario.html">
     <em>Formulário</em>
 </a>
+<li>
+    <a href="layout.html">
+        <em>Layout</em>
+    </li>
+</a>
 </li>
 </ul>
-
-
 
 <h3> I Want it Thay Way </h3>
 <ol>
