--- a/tabela.html
+++ b/tabela.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -8,34 +8,34 @@
 </head>
 
 <body>
-    <h1>Tabela</h1>
     <h2> Navegue entre as páginas ⬇ </h2>
     <ul>
         <li>
-            <a href="index.html">
-                <em>Home</em>
-            </a>
-
+        <a href="index.html">
+           <em>Home</em>
+        </a>
         </li>
-        <li>
-            <a href="fotos.html">
-                <em>Fotos - Relembrar momentos </em>
-            </a>
+    <li>
+        <a href="fotos.html">
+            <em>Fotos - Relembrar momentos </em>
+        </a>
+    </li>
+    <li>
+    <a href="tabela.html">
+        <em>Produtos</em>
+    </li>
+    
+    <li>
+    <a href="formulario.html">
+        <em>Formulário</em>
+    </a>
+    <li>
+        <a href="layout.html">
+            <em>Layout</em>
         </li>
-        <li>
-            <a href="tabela.html">
-                <em>Produtos</em>
-            </a>
-        </li>
-
-        <li>
-            <a href="formulario.html">
-                <em>Formulário</em>
-            </a>
-        </li>
+    </a>
+    </li>
     </ul>
-
-
     <table border="2">
         <thead>
             <tr>
