--- a/fotos.html
+++ b/fotos.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fotinhos</title>
 </head>
 <body>
     <h2> Navegue entre as páginas ⬇ </h2>
@@ -26,6 +26,11 @@
 <li>
 <a href="formulario.html">
     <em>Formulário</em>
+</a>
+<li>
+    <a href="layout.html">
+        <em>Layout</em>
+    </li>
 </a>
 </li>
 </ul>
