--- a/cadastro.html
+++ b/cadastro.html
@@ -33,6 +33,11 @@
         </li>
     </a>
     </li>
+    <li>
+        <a href="bingo.html">
+           <em>Bingo</em>
+        </a>
+        </li>
     </ul>
     <br>
     <label>Nome completo:</label>
