--- a/fotos.html
+++ b/fotos.html
@@ -33,6 +33,16 @@
     </li>
 </a>
 </li>
+<li>
+    <a href="cadastro.html">
+       <em>Cadastro</em>
+    </a>
+    </li>
+    <li>
+        <a href="bingo.html">
+           <em>Bingo</em>
+        </a>
+        </li>
 </ul>
     <h1>🔫⛓️ - Meus personagens favoritos - ⛓️🔫</h1>
 <h2>Jake Peralta</h2>
