--- a/tabela.html
+++ b/tabela.html
@@ -35,6 +35,16 @@
         </li>
     </a>
     </li>
+    <li>
+        <a href="cadastro.html">
+           <em>Cadastro</em>
+        </a>
+        </li>
+        <li>
+            <a href="bingo.html">
+               <em>Bingo</em>
+            </a>
+            </li>
     </ul>
     <table border="2">
         <thead>
