--- a/formulario.html
+++ b/formulario.html
@@ -33,6 +33,16 @@
         </li>
     </a>
     </li>
+    <li>
+        <a href="cadastro.html">
+           <em>Cadastro</em>
+        </a>
+        </li>
+        <li>
+            <a href="bingo.html">
+               <em>Bingo</em>
+            </a>
+            </li>
     </ul>
     <label> Input Button</label>
 <input type="button">
