--- a/layout.html
+++ b/layout.html
@@ -68,6 +68,16 @@
         </li>
     </a>
     </li>
+    <li>
+        <a href="cadastro.html">
+           <em>Cadastro</em>
+        </a>
+        </li>
+        <li>
+            <a href="bingo.html">
+               <em>Bingo</em>
+            </a>
+            </li>
     </ul>
 
     <div> Tag div </div>
