card pronto kabum

--- a/card.html
+++ b/card.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="card.css"/>        
+    <title>Kabum - Placa-Mãe </title>
+    <link rel="stylesheet" href="card.css" />
 </head>
 <body>
     <div class="card">
-    <div class="card-star"> 5 estrelas </div>
-    <div class="card-image">
-        <img src="imagens/produtos/aspirador.webp"/>
-    </div>
-    <div class="card-description">
-        Aspirador original vindo do Paraguai
-    </div>
-    <div class="card-desconto">
-        <div>R$1.500,00</div>
-        <div>Restam 9 unidades</div>
+        <div class="card-star">★★★★★</div>
+        <div class="card-image">
+            <img src="imagens/produtos/Placa_mae.webp" title="Placa-Mãe ASUS TUF GAMING">
         </div>
+            <a href="https://www.kabum.com.br/produto/165133/placa-mae-asus-tuf-gaming-a520m-plus-ii-amd-am4-matx-ddr4-preto-90mb17g0-m0eay0" class="card-description">Placa-Mãe ASUS TUF GAMING A520M-PLUS II, AMD AM4, mATX, DDR4, Preto</a>
+        <div class="card-desconto">
+            <div>R$ 780,22</div>
+          </div>
+
         <div class="card-price">
-           <div>R$899,00</div> 
-           <div>-50%</div>
- </div>
-<div class="card-parcelamento">
-    Á vista no pix -10% ou em 12x R$89,90
-</div>
+            <div>R$ 569,99</div>
+          <div class="desconto">-14%</div>
+        </div>
+        <div class="card-parcelamento">
+            À vista no PIX ou em até 10x de R$ 67,05
+        </div>
+        <div class="card-buttom-buy">
+            <button>COMPRAR</button>
+        </div>
+    </div>
 
 </body>
 </html>
