--- a/display.html
+++ b/display.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Display flax</title>
+    <title>Display flex</title>
     <style>
         #primeira{
             border: 5px solid #ff0000;
@@ -12,7 +12,7 @@
             height: 150px;
             font-size: 70pt;
         }
-        #terceiera{
+        #terceira{
             background-color: #ffff00;
             border: 10px double #008800;
             height: 300px;
@@ -34,7 +34,7 @@
 <body>
     <div id="primeira">Primeira div</div>
     <div id="segunda">Segunda div</div>
-    <div id="terceiera">
+    <div id="terceira"> 
         <div class="subdiv">Sub div 1</div>
         <div class="subdiv">Sub div 2</div>
         <div class="subdiv">Sub div 3</div>
