--- a/card.html
+++ b/card.html
@@ -9,7 +9,7 @@
     <div class="card">
         <div class="card-star">★★★★★</div>
         <div class="card-image">
-            <img src="imagens/produtos/Placa_mae.webp" title="Placa-Mãe ASUS TUF GAMING">
+            <img src="imagens/produtos/Placa_mae.webp" title="Placa-Mãe ASUS TUF GAMING" width="200px"height="200px">
         </div>
             <a href="https://www.kabum.com.br/produto/165133/placa-mae-asus-tuf-gaming-a520m-plus-ii-amd-am4-matx-ddr4-preto-90mb17g0-m0eay0" class="card-description">Placa-Mãe ASUS TUF GAMING A520M-PLUS II, AMD AM4, mATX, DDR4, Preto</a>
         <div class="card-desconto">
@@ -17,15 +17,16 @@
           </div>
 
         <div class="card-price">
-            <div>R$ 569,99</div>
+            <div>R$&nbsp569,99</div>
           <div class="desconto">-14%</div>
         </div>
         <div class="card-parcelamento">
-            À vista no PIX ou em até 10x de R$ 67,05
+            À vista no PIX 
+            <br>
+            ou em até 10x de R$ 67,05
         </div>
         <div class="card-buttom-buy">
             <button>COMPRAR</button>
-        </div>
     </div>
 
 </body>
